i have no idea what this commit does.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         </p>
         <p class="image-location js-location-city">
         </p>
-        <p class="photographer-name js-photographer-name">
+        <div class="photographer-frame">
           <i class="icon-camera"></i> by
-        </p>
+          <span class="photographer-name js-photographer-name">
+          </span>
+        </div>
       </div>
     </main>
     <script
