--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <title>visual music</title>
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
     <link rel="stylesheet" href="_css/styles.css">
-    <link rel="stylesheet" href="_css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/72ba723ecd.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
+    <div class="spinner-wrapper">
+      <h1>Ataraxia</h1>
+      <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
+      </div>
+    </div>
     <main>
       <div>
-        <ul class="cb-slideshow">
+        <ul class="slideshow">
         </ul>
-      </div>
-      <div class="content-frame">
-        <p class="image-information"></p>
-        <p class="photographer-name js-photographer-name"></p>
       </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
