menu button placed on screen. Menu message in scafolding

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>visual music</title>
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="_css/styles.css">
     <script src="https://use.fontawesome.com/72ba723ecd.js"></script>
     <meta charset="utf-8">
@@ -19,6 +19,18 @@
       <div>
         <ul class="slideshow">
         </ul>
+      </div>
+      <div class="site-message-frame">
+        <h2>Ataraxia</h2>
+        <p class="title-definition">calmness or peace of mind; emotional tranquillity</p>
+        <p class="site-message-content">This is a place for you to rest your mind. A safe internet space where no user data is captured and nothing is sold.</p>
+        <p class="site-message-content">Reclaim a small part of your day. Get lost in the imagery. Take some deep breaths. And most of all remember this world is a beautiful palce when you remember to look around.</p>
+         <input type="checkbox" id="removeQuotes" name="removeQuotes" value="removeQuotes">
+        <label for="removeQuotes">Remove quotes</label>
+      </div>
+      <div class="menu-frame">
+        <div class="dot"></div>
+        <div class="pulse"></div>
       </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
