pre-beta code needs clean up

--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
         <ul class="slideshow">
         </ul>
       </div>
-      <div class="site-message-frame">
-        <h2>Ataraxia</h2>
-        <p class="title-definition">calmness or peace of mind; emotional tranquillity</p>
+      <div class="site-message-frame hidden-message">
+        <h2 class="site-message-headline">Ataraxia</h2>
+        <p class="title-definition">calmness or peace of mind; emotional&nbsp;tranquillity</p>
         <p class="site-message-content">This is a place for you to rest your mind. A safe internet space where no user data is captured and nothing is sold.</p>
         <p class="site-message-content">Reclaim a small part of your day. Get lost in the imagery. Take some deep breaths. And most of all remember this world is a beautiful palce when you remember to look around.</p>
-         <input type="checkbox" id="removeQuotes" name="removeQuotes" value="removeQuotes">
-        <label for="removeQuotes">Remove quotes</label>
+        <p class="image-timer-disclaimer">*Images rotate every 90 seconds.</p>
+         <label for="removeQuote" id="removeQuoteLabel">
+          <input type="checkbox" id="removeQuote" name="removeQuote" value="removeQuote">
+          Remove quotes
+        </label>
+        <label for="removePhotographer" id="removePhotographerLabel">
+          <input type="checkbox" id="removePhotographer" name="removePhotographer" value="removePhotographer">
+          Remove photographer
+        </label>
       </div>
       <div class="menu-frame">
         <div class="dot"></div>
