--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="_css/styles.css">
     <script src="https://use.fontawesome.com/72ba723ecd.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
   </head>
   <body>
@@ -24,11 +26,11 @@
         <h2 class="site-message-headline">Ataraxia</h2>
         <p class="title-definition">calmness or peace of mind; emotional&nbsp;tranquillity</p>
         <p class="site-message-content">This is a place for you to rest your mind. A safe internet space where no user data is captured and nothing is sold.</p>
-        <p class="site-message-content">Reclaim a small part of your day. Get lost in the imagery. Take some deep breaths. And most of all remember this world is a beautiful palce when you remember to look around.</p>
+        <p class="site-message-content">Reclaim a small part of your day. Get lost in the imagery. Take some deep breaths. And most of all remember this world is a beautiful palce when you stop to look around.</p>
         <p class="image-timer-disclaimer">*Images rotate every 90 seconds.</p>
          <label for="removeQuote" id="removeQuoteLabel">
           <input type="checkbox" id="removeQuote" name="removeQuote" value="removeQuote">
-          Remove quotes
+          Remove quote
         </label>
         <label for="removePhotographer" id="removePhotographerLabel">
           <input type="checkbox" id="removePhotographer" name="removePhotographer" value="removePhotographer">
