preloader to welcome message to slide show working. next up menu icon settings and slideshow arrows

--- a/index.html
+++ b/index.html
@@ -10,37 +10,40 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div class="spinner-wrapper">
-      <h1>Ataraxia</h1>
-      <div class="spinner">
-        <div class="dot1"></div>
-        <div class="dot2"></div>
-      </div>
-    </div>
     <main>
       <div>
         <ul class="slideshow">
         </ul>
       </div>
-      <div class="site-message-frame hidden-message">
-        <h2 class="site-message-headline">Ataraxia</h2>
-        <p class="title-definition">calmness or peace of mind; emotional&nbsp;tranquillity</p>
-        <p class="site-message-content">This is a place for you to rest your mind. A safe internet space where no user data is captured and nothing is sold.</p>
-        <p class="site-message-content">Reclaim a small part of your day. Get lost in the imagery. Take some deep breaths. And most of all remember this world is a beautiful palce when you stop to look around.</p>
-        <p class="image-timer-disclaimer">*Images rotate every 90 seconds.</p>
-         <label for="removeQuote" id="removeQuoteLabel">
-          <input type="checkbox" id="removeQuote" name="removeQuote" value="removeQuote">
-          Remove quote
-        </label>
-        <label for="removePhotographer" id="removePhotographerLabel">
-          <input type="checkbox" id="removePhotographer" name="removePhotographer" value="removePhotographer">
-          Remove photographer
-        </label>
-      </div>
       <div class="menu-frame">
-        <div class="dot"></div>
-        <div class="pulse"></div>
+        <div class="menu-icon--settings">
+          <i class="fa fa-cog" aria-hidden="true"></i>
+        </div>
+        <div class="menu-icon--camera">
+          <i class="fa fa-camera-retro" aria-hidden="true"></i>
+        </div>
+        <div class="menu-icon--quote">
+          <i class="fa fa-quote-left" aria-hidden="true"></i>
+        </div>
+        <div class="menu-icon--prevImage">
+          <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+        </div>
+        <div class="menu-icon--nextImage">
+          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+        </div>
       </div>
+       <section class="site-message-frame">
+        <div class="site-messge-content">
+          <h2 class="site-message-headline">Ataraxia</h2>
+          <p class="title-definition">calmness or peace of mind; emotional&nbsp;tranquillity</p>
+          <p>Welcome to <span class="logo-font">Ataraxia</span>. A very small piece of cyber space. That dares to exist for no other purpose than to simple be. I will never sell you anthing or collect user data from your behaviors.</p>
+          <p>Feel free to rest your mind. Take deep breaths. Do some light stretching. When you're ready I'll help you reclaim a small part of your day.</p>
+          <p>We are going to get lost in the beauty of the world through the medium of photography. Hopefully you'll see something inspiring. There are adventures waiting for you just beyound the glass.</p>
+          <p>All Images are provided by unsplash. New images will be added daily.</p>
+          <p class="image-timer-disclaimer">*Images rotate every 90 seconds.</p>
+          <a href="#" class="start-button">Let's begin</a>
+        </div>
+      </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="_js/data.js"></script>
