welcome message text revisions provided by Kurt

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         <div class="site-messge-content">
           <h2 class="site-message-headline">Ataraxia</h2>
           <p class="title-definition">calmness or peace of mind; emotional&nbsp;tranquillity</p>
-          <p>Welcome to <span class="logo-font">Ataraxia</span>. A very small piece of cyber space. That dares to exist for no other purpose than to simple be. I will never sell you anthing or collect user data from your behaviors.</p>
-          <p>Feel free to rest your mind. Take deep breaths. Do some light stretching. When you're ready I'll help you reclaim a small part of your day.</p>
-          <p>We are going to get lost in the beauty of the world through the medium of photography. Hopefully you'll see something inspiring. There are adventures waiting for you just beyound the glass.</p>
-          <p>All Images are provided by unsplash. New images will be added daily.</p>
+          <p>Welcome to <span class="logo-font">Ataraxia</span>, a small corner of cyberspace that dares to exist for no purpose other than simply to be. There is nothing to buy, and your data isn’t collected.</p>
+          <p>Feel free to rest your mind. Breathe deep. Do some light stretching. When you're ready, reclaim a small part of your day, and get lost in the beauty of the world through photography. Be inspired to embark on adventures waiting for you just beyond the glass.</p>
+          <p>All Images are provided by unsplash, and new images are added daily.</p>
           <p class="image-timer-disclaimer">*Images rotate every 90 seconds.</p>
           <a href="#" class="start-button">Let's begin</a>
         </div>
