slideshow in development

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="menu-icon--quote">
           <i class="fa fa-quote-left" aria-hidden="true"></i>
         </div>
-        <div class="menu-icon--prevImage">
-          <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+        <div class="menu-icon--prevImage" id="js-prevImageArrow">
+            <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
         </div>
-        <div class="menu-icon--nextImage">
+        <div class="menu-icon--nextImage" id="js-nextImageArrow">
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </div>
       </div>
