moving loader into html and out of rendering function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <section class="spinner-wrapper">
+      <h1>Ataraxia</h1>
+      <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
+      </div>
+    </section>
     <main>
       <div>
         <ul class="slideshow">
