--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>visual music</title>
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="_css/styles.css">
+    <link rel="stylesheet" href="./_css/styles.css">
     <script src="https://use.fontawesome.com/72ba723ecd.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -52,9 +52,8 @@
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="_js/data.js"></script>
-    <!-- <script src="_js/scripts.js"></script> -->
+    <script src="./_js/data.js"></script>
     <script src="node_modules/lodash/lodash.min.js"></script>
-    <script src="_js/app.js"></script>
+    <script src="./_js/app.js"></script>
   </body>
 </html>
